--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Simulador Educativo</title>
+  <title>Facebook - Inicia sesión</title>
   <style>
     body {
       margin: 0;
